# cuda-compression-poc

./: .gitignore  .gitmodules  README.md
cusz/: CMakeLists.txt  README.md
cusz/src/: main.cu  nvtx.cuh
reports/: ZFP_CuSZ_Analysis.xlsx  gen_charts.py  memfootprint.csv  nsightjson_to_csv.py  report.txt  spenttime.csv
reports/cusz_abs_4gpu_10iter-each/: cusz-549446_stats.txt  cusz-549452_stats.txt  cusz_abs_4gpu_10iter-each.log.txt  cusz_abs_4gpu_10iter-each.qdrep  cusz_abs_4gpu_10iter-each.sqlite
reports/cusz_r2r_4gpu_10iter-each/: cusz-549439_stats.txt  cusz-549453_stats.txt  cusz_r2r_4gpu_10iter-each.log.txt  cusz_r2r_4gpu_10iter-each.qdrep  cusz_r2r_4gpu_10iter-each.sqlite
reports/zfp_rate4_4gpu_10iter-each/: zfp-549435.txt  zfp_rate4_4gpu_10iter-each.json  zfp_rate4_4gpu_10iter-each.log.txt  zfp_rate4_4gpu_10iter-each.qdrep  zfp_rate4_4gpu_10iter-each.sqlite
reports/zfp_rate8_4gpu_10iter-each/: zfp-549433_stats.txt  zfp_rate8_4gpu_10iter-each.json  zfp_rate8_4gpu_10iter-each.log.txt  zfp_rate8_4gpu_10iter-each.qdrep  zfp_rate8_4gpu_10iter-each.sqlite  zfp_rate8_4gpu_10iter-each.txt
zfp/: CMakeLists.txt  README.md
zfp/cmake/: FindNVTX.cmake
zfp/src/: main.cu  nvtx.cuh
